adding deanon. video

--- a/publication/sdmm-paper/cite.bib
+++ b/publication/sdmm-paper/cite.bib
@@ -1,4 +1,4 @@
-@article{dodik2021path,
+@article{dodik21pathguiding,
 author = {Dodik, Ana and Papas, Marios and Öztireli, Cengiz and Müller, Thomas},
 title = {Path Guiding Using Spatio-Directional Mixture Models},
 journal = {Computer Graphics Forum},
